[gd_scene load_steps=12 format=3 uid="uid://d3sn0dxs6h578"]

[ext_resource type="Script" uid="uid://ba1brqnyfqhry" path="res://scripts/level_menu/level_menu.gd" id="1_2gqye"]
[ext_resource type="Texture2D" uid="uid://dcpundjbm6rlm" path="res://images/level_menu/mundi.png" id="1_poif0"]
[ext_resource type="Texture2D" uid="uid://be2kjg81hnd" path="res://images/level_menu/pixil-frame-0 (1).png" id="2_mwq4c"]
[ext_resource type="Texture2D" uid="uid://rc3v1iw7c0sc" path="res://images/level_menu/panel.png" id="4_o1nls"]
[ext_resource type="Script" uid="uid://bgc35cps12kty" path="res://scripts/level_menu/brazil_resume.gd" id="5_jsrvk"]
[ext_resource type="FontFile" uid="uid://cwn34f5aeghxs" path="res://fonts/PressStart2P-Regular.ttf" id="6_mkvq6"]
[ext_resource type="Script" uid="uid://bs8srustd5h2i" path="res://scripts/level_menu/iceland_resume.gd" id="7_ugxk8"]
[ext_resource type="Script" uid="uid://ccbb22h4oexj7" path="res://scripts/level_menu/usa_resume.gd" id="8_iqewy"]
[ext_resource type="Script" uid="uid://xsp6bqliplws" path="res://scripts/level_menu/select_text.gd" id="9_ugxk8"]

[sub_resource type="Theme" id="Theme_2gqye"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mkvq6"]
texture = ExtResource("4_o1nls")

[node name="LevelMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2gqye")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_poif0")
expand_mode = 2

[node name="Brazil" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.316
anchor_top = 0.66700006
anchor_right = 0.316
anchor_bottom = 0.66700006
offset_left = -20.032013
offset_top = -20.216034
offset_right = 19.967987
offset_bottom = 19.783966
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
theme = SubResource("Theme_2gqye")
texture_normal = ExtResource("2_mwq4c")
stretch_mode = 5

[node name="Iceland" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.49100003
anchor_top = 0.13700001
anchor_right = 0.49100003
anchor_bottom = 0.13700001
offset_left = -19.632019
offset_top = -19.776009
offset_right = 20.367981
offset_bottom = 20.223991
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
theme = SubResource("Theme_2gqye")
texture_normal = ExtResource("2_mwq4c")
stretch_mode = 5

[node name="USA" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.194
anchor_top = 0.418
anchor_right = 0.194
anchor_bottom = 0.418
offset_left = -20.488007
offset_top = -19.864014
offset_right = 19.511993
offset_bottom = 20.135986
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
theme = SubResource("Theme_2gqye")
texture_normal = ExtResource("2_mwq4c")
stretch_mode = 5

[node name="BrazilResume" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.328
anchor_top = 0.284
anchor_right = 0.611
anchor_bottom = 0.671
offset_left = 0.14398193
offset_top = -0.03201294
offset_right = -54.205383
offset_bottom = -41.9747
scale = Vector2(1.2, 1.2)
theme_override_styles/panel = SubResource("StyleBoxTexture_mkvq6")
script = ExtResource("5_jsrvk")

[node name="Label" type="Label" parent="BrazilResume"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.132
anchor_top = 0.17300001
anchor_right = 0.8880001
anchor_bottom = 0.30200002
offset_left = 0.085329056
offset_top = 0.03932953
offset_right = -0.03199768
offset_bottom = 0.07733154
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_mkvq6")
theme_override_font_sizes/font_size = 21
text = "Brazil"
horizontal_alignment = 1

[node name="IcelandResume" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.499
anchor_top = 0.171
anchor_right = 0.78200006
anchor_bottom = 0.558
offset_left = 0.15197754
offset_top = 0.19200897
offset_right = -54.19745
offset_bottom = -41.7507
scale = Vector2(1.2, 1.2)
theme_override_styles/panel = SubResource("StyleBoxTexture_mkvq6")
script = ExtResource("7_ugxk8")

[node name="Label" type="Label" parent="IcelandResume"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.132
anchor_top = 0.17300001
anchor_right = 0.8880001
anchor_bottom = 0.30200002
offset_left = 0.085329056
offset_top = 0.03932953
offset_right = -0.03199768
offset_bottom = 0.07733154
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_mkvq6")
theme_override_font_sizes/font_size = 21
text = "Iceland"
horizontal_alignment = 1

[node name="UsaResume" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.19500001
anchor_top = 0.432
anchor_right = 0.47800002
anchor_bottom = 0.81900007
offset_left = 0.35998535
offset_top = 0.06399536
offset_right = -53.98938
offset_bottom = -41.878723
scale = Vector2(1.2, 1.2)
theme_override_styles/panel = SubResource("StyleBoxTexture_mkvq6")
script = ExtResource("8_iqewy")

[node name="Label" type="Label" parent="UsaResume"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.132
anchor_top = 0.17300001
anchor_right = 0.8880001
anchor_bottom = 0.30200002
offset_left = 0.085329056
offset_top = 0.03932953
offset_right = -0.03199768
offset_bottom = 0.07733154
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_mkvq6")
theme_override_font_sizes/font_size = 21
text = "USA"
horizontal_alignment = 1

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.934
anchor_right = 0.5
anchor_bottom = 0.934
offset_top = -0.23199463
offset_bottom = -0.23199463
grow_horizontal = 2
grow_vertical = 0

[node name="SelectText" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -352.0
offset_top = -22.0
offset_right = 352.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("6_mkvq6")
theme_override_font_sizes/font_size = 22
text = "Select a place to visit!"
horizontal_alignment = 1
script = ExtResource("9_ugxk8")

[connection signal="mouse_entered" from="Brazil" to="BrazilResume" method="_on_brazil_mouse_entered"]
[connection signal="mouse_exited" from="Brazil" to="BrazilResume" method="_on_brazil_mouse_exited"]
[connection signal="pressed" from="Brazil" to="." method="_on_brazil_pressed"]
[connection signal="mouse_entered" from="Iceland" to="IcelandResume" method="_on_iceland_mouse_entered"]
[connection signal="mouse_exited" from="Iceland" to="IcelandResume" method="_on_iceland_mouse_exited"]
[connection signal="pressed" from="Iceland" to="." method="_on_iceland_pressed"]
[connection signal="mouse_entered" from="USA" to="UsaResume" method="_on_usa_mouse_entered"]
[connection signal="mouse_exited" from="USA" to="UsaResume" method="_on_usa_mouse_exited"]
[connection signal="pressed" from="USA" to="." method="_on_eua_pressed"]
